<resources>
    <string name="app_name">WGPlaner</string>
    <string name="add_item_activity">Add Item</string>
    <string name="set_up_group_activity">Create Group</string>
    <string name="join_group_activity">Join Group</string>
    <string name="profile_settings_activity">Your Profile</string>
    <string name="group_settings_activity">Your Group</string>
    <string name="title_activity_home">Home</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>

    <string name="splash_screen_failed_to_connect">Connection to Server failed</string>
    <string name="splash_screen_connection_timeout">Connection Timeout</string>
    <string name="splash_screen_swipe_to_refresh">Swipe down to refresh</string>

    <!-- String related to NavView -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_shopping_list">Shopping List</string>
    <string name="nav_accounting">Accounting</string>
    <string name="nav_bought_items">Bought Items</string>
    <string name="nav_rosters">Rosters</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_pinboard">Pinboard</string>
    <string name="nav_section_sections">Sections</string>
    <string name="nav_section_settings">Settings</string>
    <string name="nav_general_settings">General</string>
    <string name="nav_profile_settings">Profile</string>
    <string name="nav_group_settings">Group</string>

    <!-- Registration Strings -->
    <string name="nav_back">Navigate back</string>
    <string name="header_welcome">Welcome!</string>
    <string name="header_username">Please pick a descriptive Username so that your friends recognize you</string>
    <string name="header_profile_picture">You can upload a profile picture, if you want to</string>
    <string name="header_email_address">You can state an email address, if you want to</string>
    <string name="text_welcome">You\'re about to register for the WGPlaner Android Application.\n\nWe will guide you through the Registration progress&#8230;</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_skip">Skip</string>
    <string name="input_username_hint">Username</string>
    <string name="input_email_hint">EMail</string>
    <string name="warning_input_username_empty">Please pick a Username!</string>
    <string name="logo_content_description">WGPlaner Logo</string>

    <!-- AddItem strings -->
    <string name="add_item_name_hint">Product name</string>
    <string name="add_item_number_hint">Number</string>
    <string name="add_item_requested_for_hint">Requested for</string>
    <string name="add_item_add_requested_for_label">Add User</string>
    <string name="add_item_add_requested_for_pick_users">Pick Users</string>
    <string name="add_item_add_requested_for_positive">OK</string>
    <string name="add_item_add_requested_for_negative">Cancel</string>
    <string name="add_item_requested_for_close_content_description">Remove user</string>

    <!-- SetUp Strings -->
    <string name="set_up_group_name_hint">Group name</string>
    <string name="set_up_group_currency_hint">Currency</string>
    <string name="set_up_group_name_error">Please enter a group name</string>
    <string name="set_up_group_currency_error">Please pick a currency</string>
    <string name="set_up_group_header">Dear %s</string>
    <string name="set_up_group_body_key">In order to use all available features of the WGPlaner Application you have to be member of a group.\n\nTherefore you can either join an existing group by entering the corresponding access key or create a new group</string>
    <string name="set_up_key_hint">Key</string>
    <string name="set_up_btn_create_group">Create group</string>
    <string name="set_up_btn_join_group">Join group</string>

    <string name="full_screen_add_save_item">SAVE</string>

    <string name="dialog_discard_message">Discard draft?</string>
    <string name="dialog_discard_positive">Discard</string>
    <string name="dialog_discard_negative">Cancel</string>

    <!-- Server-Result Strings -->
    <string name="user_unauthorized">Unauthorized</string>
    <string name="server_connection_failed">Connection to Server failed</string>

    <string name="section_title_set_up_group">Group SetUp</string>
    <string name="section_title_shopping_list">Shopping List</string>
    <string name="section_title_pinboard">Pinboard</string>
    <string name="section_title_bought_items">Bought Items</string>

    <!-- Product related strings -->
    <string name="product_attribute_number">Number</string>
    <string name="product_attribute_requested_by">Requested by</string>
    <string name="product_attribute_requested_for">Requested for</string>
    <string name="product_attribute_price">Price</string>
    <string name="product_action_add_price">Add Price</string>
    <string name="product_action_change_price">Change Price</string>

    <string name="group_label">Group</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://api.wgplaner.ameyering.de\",\n  }\n}]</string>

    <!-- Profile Settings strings -->
    <string name="profile_settings_btn_leave_group">Leave Group</string>
    <string name="profile_settings_username_hint">Name</string>
    <string name="profile_settings_btn_save_changes">Save Changes</string>
    <string name="delete_display_name_error">You can not delete your Name</string>
    <string name="edit_profile_button">EDIT</string>

    <!-- BackNavigation String -->
    <string name="back_press_leave_notification">Press back again to leave the Application</string>

    <string name="user_detail_email_default">Not specified</string>
    <string name="currency">Currency</string>
    <string name="euro">Euro</string>
    <string name="dollar">Dollar</string>
    <string name="members">Groupmembers</string>
    <string name="addUser">Add User</string>

    <!-- Group Settings strings -->
    <string name="delete_group_name_error"> You can not delete the Name</string>
    <string name="delete_currency_error"> You can not delete the Currency</string>

    <string name="load_profile_picture_error">Failed to load Picture</string>

    <!-- UserDialog Strings -->
    <string name="joined_at_hint">Joined at</string>
    <string name="dialog_invite_friends_title">Access Key</string>
    <string name="dialog_invite_friends_button_copy">Copy</string>
    <string name="dialog_invite_friends_button_share">Share</string>
    <string name="send_to">Send to</string>

    <string name="dialog_leave_group_title">Leave group</string>
    <string name="dialog_leave_group_message">Are you sure?</string>
    <string name="dialog_leave_group_positive">Leave Group</string>

    <string name="access_key_copied">Access Key copied to Clipboard</string>
    <string name="generate_access_key_error">Failed to generate Access Key</string>

    <string name="invalid_email">Please state a valid EMail or no EMail</string>
    <string name="fill_out_all_fields">Please fill out all fields</string>

    <string name="sort_by_label_requested_for">Requested for</string>
    <string name="sort_by_label_requested_by">Requested by</string>
    <string name="sort_by_label_category">Category</string>
    <string name="sort_by_label_name">Name</string>

    <string name="search_title">Search</string>

    <string name="bill_detail_cost_label">Costs</string>
    <string name="bill_detail_items_label">Items</string>
    <string name="bill_detail_action_pay">mark as paid</string>
    <string name="bill_detail_action">complete billing</string>

    <string name="bought_items_action_mode_menu_bill">bill items</string>
    <string name="bought_items_action_mode_menu_undo">undo</string>
    <string name="bought_items_action_mode_selected_label">selected</string>
    <string name="bought_items_action_mode_price_not_set">not set</string>

    <string name="item_detail_action_add_price">Add price</string>
    <string name="item_detail_label_bought_on">Bought on</string>
    <string name="item_detail_label_bought_by">Bought by</string>
    <string name="item_detail_label_requested_by">Requested by</string>
    <string name="item_detail_label_requested_for">Requested for</string>

    <string name="error_invalid_currency">Please enter a valid currency</string>
    <string name="error_group_name_invalid">Please enter a group name</string>

    <string name="add_price_dialog">Add price</string>
    <string name="add_price_hint">Price</string>
    <string name="dialog_add_price_positive">Add Price</string>
    <string name="dialog_add_price_negative">Cancel</string>
    <string name="dialog_add_price_error">Please provide a price or cancel</string>

    <string name="create_bill_add_due_date_hint">Due Date</string>
    <string name="create_bill_due_date_error">Please select a date one week after today</string>
    <string name="create_bill_title">Create Bill</string>
    <string name="create_bill_items_label">Items</string>
    <string name="create_bill_recipients_label">Recipients</string>
    <string name="item_detail_label_amount">Amount</string>
    <string name="item_detail_title">Item</string>
    <string name="item_detail_amount_format">%s pieces</string>

    <string name="group_settings_action_add_member">Add</string>
    <string name="group_settings_action_remove_member">Remove</string>
    <string name="group_settings_action_make_admin">Make Admin</string>
    <string name="group_settings_label_members">Members</string>
    <string name="group_settings_name_error">Please provide a name</string>
    <string name="group_settings_currency_error">Please select a valid currency</string>

    <string name="section_shopping_list_no_items">There are currently no items in the shopping list</string>
    <string name="share_join_intent_chooser">Share access key</string>
    <string name="share_join_intent_subject">Join our WGPlaner Group!</string>
    <string name="share_join_intent_text">Click the link to join our WGPlaner Group: %s</string>

    <string name="section_bills_received_bills_tab">Received</string>
    <string name="section_bills_sent_bills_tab">Sent</string>
    <string name="section_title_bills">Bills</string>

    <string name="pick_image">Pick image</string>
    <string name="generate_image">Generate standard Image</string>

    <string name="cost_recipient_sum_label">Sum</string>
    <string name="cost_recipient_status_label">Status</string>
    <string name="cost_recipient_action_confirm">Confirm Payment</string>
    <string name="bill_detail_owner_label">Owner</string>
    <string name="bill_detail_recipients_label">Recipients</string>

    <string name="bought_items_empty">There are currently no bought Items which aren\'t billed yet</string>
    <string name="bill_list_empty">There are currently no bills to display</string>

    <string name="user_attribute_name">Name</string>
    <string name="user_attribute_email">Email</string>
    <string name="user_attribute_created_at">Joined at</string>
    <string name="edit_display_name_title">Edit Name</string>
    <string name="edit_email_title">Edit Email</string>
    <string name="load_image_failed">Loading of image failed</string>
</resources>
