<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_nav_dashboard"
            android:title="@string/nav_dashboard"/>
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_nav_shopping_list"
            android:title="@string/nav_shopping_list" />
        <item
            android:id="@+id/nav_accounting"
            android:icon="@drawable/ic_nav_accounting"
            android:title="@string/nav_accounting" />
        <item
            android:id="@+id/nav_rosters"
            android:icon="@drawable/ic_nav_rosters"
            android:title="@string/nav_rosters" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_nav_calendar"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_pinboard"
            android:icon="@drawable/ic_nav_pinboard"
            android:title="@string/nav_pinboard"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
