<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/header_profile_picture"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|fill_horizontal"
        android:orientation="horizontal">

        <de.ameyering.wgplaner.wgplaner.customview.CircularImageView
            android:id="@+id/registration_profile_picture"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:layout_weight="0.7"
            android:elevation="5dp"
            app:srcCompat="@drawable/profile_picture_dummy" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_continue_upload_profile_picture"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_continue" />

    <Button
        android:id="@+id/btn_skip_upload_profile_picture"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_skip" />

</LinearLayout>
