<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <de.ameyering.wgplaner.wgplaner.customview.CircularImageView
                android:id="@+id/group_settings_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:layout_margin="10dp"
                android:layout_weight="0.7"
                android:elevation="5dp"
                app:srcCompat="@drawable/profile_picture_dummy" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lbName_group_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.7">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tfName_group_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_settings_username_hint"
                    android:textSize="18dp" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tvCurrency_group_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.7"
                android:text="@string/currency"
                android:textSize="18dp" />

            <RadioGroup
                android:id="@+id/rbgCurrency_group_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.7">

                <RadioButton
                    android:id="@+id/rbEuro_group_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/euro" />

                <RadioButton
                    android:id="@+id/rbDollar_group_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/dollar" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvMembers_group_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.7"
                android:text="@string/members"
                android:textSize="18dp" />

            <ListView
                android:id="@+id/ltMembers_group_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.7" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
