<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <de.ameyering.wgplaner.wgplaner.customview.CircularImageView
        android:id="@+id/fragment_setup_create_group_picture"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:elevation="5dp"
        app:srcCompat="@color/colorBackground" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_setup_create_group_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/fragment_setup_create_input_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_up_group_name_hint"
            android:inputType="textCapWords|textAutoCorrect|textAutoComplete" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/set_up_group_currency_hint" />

        <Spinner
            android:id="@+id/fragment_setup_create_spinner_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/fragment_setup_create_btn_create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorButtonLight"
        android:text="@string/set_up_btn_create_group" />

</LinearLayout>
